[FEATURE] Fixed painting and color picking on global selections

This patch fixes three problems:

1) Painting on a global selection now is not recursively limited to
   the selected area of the selection itself. If current node and active
   selection mask are the same entity, KisResourcesSnapshot will report
   no selection active.

2) Color Picker can now pick from selection masks. Yes, it converts the
   color into compositionSourceColorSpace() to make it paintable.

3) The Color Picker's option widget now shows alpha value correctly,
   although the resource server gets opaque color.

CCMAIL:kimageshop@kde.org
BUG:336115